# Python_42_modules

Python_module_00/ex5/: ft_count_harvest_iterative.py  ft_count_harvest_recursive.py
Python_module_01/ex0/: ft_garden_intro.py
Python_module_01/ex1/: ft_garden_data.py
Python_module_01/ex2/: ft_plant_growth.py
Python_module_01/ex3/: ft_plant_factory.py
Python_module_01/ex4/: ft_garden_security.py
Python_module_01/ex5/: ft_plant_types.py
Python_module_01/ex6/: ft_garden_analytics.py
Python_module_02/ex0/: ft_first_exception.py
Python_module_02/ex1/: ft_different_errors.py
Python_module_02/ex2/: ft_custom_errors.py
Python_module_02/ex3/: ft_finally_block.py
Python_module_02/ex4/: ft_raise_errors.py
Python_module_02/ex5/: ft_garden_management.py
Python_module_03/ex0/: ft_command_quest.py
Python_module_03/ex1/: ft_score_analytics.py
Python_module_03/ex2/: ft_coordinate_system.py
Python_module_03/ex3/: ft_achievement_tracker.py
Python_module_03/ex4/: ft_inventory_system.py
Python_module_03/ex5/: ft_data_stream.py
Python_module_03/ex6/:  ft_analytics_dashboard.py
Python_module_04/ex0/: ft_ancient_text.py
Python_module_06/: ft_circular_curse.py  ft_import_transmutation.py  ft_pathway_debate.py  ft_sacred_scroll.py
Python_module_08/ex01/: loading.py  pyproject.toml  requirements.txt
ex0/: ft_hello_garden.py
ex1/: ft_plot_area.py
ex2/: ft_harvest_total.py
ex3/: ft_plant_age.py
ex4/: ft_water_reminder.py
ex5/: ft_count_harvest_iterative.py  ft_count_harvest_recursive.py
ex6/: ft_garden_summary.py
ex7/: ft_seed_inventory.py
(+46 files in other folders)
