
[tool.poetry]
package-mode = false
name = "the-matrix-loading"
version = "1.0.0"
description = "Matrix data analysis pipeline — Exercise 01"
authors = ["Data Architect <architect@zion.net>"]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.0.0"
numpy  = "^1.24.0"
matplotlib = "^3.7.0"
requests = "^2.31.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
